fixes spacing issue in header

--- a/styleguide/source/_patterns/03-templates/04-topic/_topic.scss
+++ b/styleguide/source/_patterns/03-templates/04-topic/_topic.scss
@@ -7,7 +7,6 @@
   display: grid;
   display: -ms-grid;
   grid-template-columns: 100%;
-  @include gutter($padding-top-half...);
 
   @include breakpoint($bp-small) {
     grid-template-columns: 2fr 1fr;
